# basher

./: .gitignore  Cargo.toml  README.md
.basher/logs/manual/: basher.rrd
.github/workflows/: rust.yaml
src/: lib.rs  main.rs  state.rs
src/basher_rerun/: mod.rs
src/basher_rerun/types/: mod.rs  rerun_pose.rs
src/quad/: mock.rs  mod.rs  pose.rs
src/rerun/: mod.rs
src/state/: commander.rs  mod.rs  quad_state.rs  waypoint.rs
src/system/: mock.rs  mod.rs  runner.rs
src/system/quad/: commander.rs  mock_quad.rs  mod.rs
src/system/simulation/: exact_control.rs  mod.rs  physics_sim.rs
src/system/simulation/physics/: actor.rs  context.rs  mod.rs
src/system/viz/: mod.rs  rerun_system.rs
src/types/: mod.rs  pose.rs
